[project]
name = "chroma"
version = "0.3.0"
description = "Pretty printing for Python"
authors = ["Daniele Canavese"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4"
]

[project.urls]
repository = "https://github.com/daniele-canavese/chroma"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
