[project]
name = "chroma"
version = "0.3.1"
description = "Pretty printing for Python"
authors = [{ name = "Daniele Canavese", email = "daniele.canavese@irit.fr" }]
license = { text = "Apache-2.0", file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4"
]

[project.urls]
repository = "https://github.com/daniele-canavese/chroma"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
