[project]
name = "chroma"
version = "0.4.3"
description = "Pretty printing for Python"
authors = [{ name = "Daniele Canavese", email = "daniele.canavese@irit.fr" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "rich>=13.9.4"
]

[project.urls]
repository = "https://github.com/daniele-canavese/chroma"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
